--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 /* ------------Tailwind------------ */
 @import "tailwindcss";
+
+@utility container {
+  margin-inline: auto;
+  padding-inline: 1rem;
+}
+/* ------------Themes------------ */
+@theme{
+  --font-cormorant: "Cormorant Garamond", "serif";
+  --font-inter: "Inter", "sans-serif";
+  --color-brand: #EF0101;
+  --color-secondBK: #0B0109;
+}
