Navbar & Banner complete

--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,26 @@
 /* --------------Common Css--------------- */
+#Banner{
+    width: 100%;
+    background-image: url(../src/assets/images/BannerImg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.TextUnderline{
+    text-decoration: underline;
+    text-decoration-thickness: 3px;
+    text-underline-offset: 5px;
+}
+.RotateText{
+    transition: all linear 300ms;
+    animation: Rotate infinite linear 10s;
+}
+@keyframes Rotate {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
