--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
 /* ------------Tailwind------------ */
 @import "tailwindcss";
 
 @utility container {
   margin-inline: auto;
-  padding-inline: 1rem;
+  padding-inline: 0rem;
 }
 /* ------------Themes------------ */
 @theme{
   --font-cormorant: "Cormorant Garamond", "serif";
   --font-inter: "Inter", "sans-serif";
+  --font-oswald: "Oswald", "sans-serif";
   --color-brand: #EF0101;
   --color-secondBK: #0B0109;
 }
