--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
 /* ------------Tailwind------------ */
 @import "tailwindcss";
@@ -14,6 +15,7 @@
   --font-cormorant: "Cormorant Garamond", "serif";
   --font-inter: "Inter", "sans-serif";
   --font-oswald: "Oswald", "sans-serif";
+  --font-dmSans: "DM Sans", "sans-serif";
   --color-brand: #EF0101;
   --color-secondBK: #0B0109;
 }
